KYLIN-1744 Add source offsets to CubeSegment